# stock_portfolio_monitoring

./: .autopep8  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: cron-email-daily.yml  cron-email-monthly.yml  cron-email-weekly.yml
assets/: dashAgGridComponentFunctions.js  style.css
components/callbacks/: __init__.py  routing.py
components/callbacks/portfolio_mode/: __init__.py  alerts_modal_callbacks.py  insert_row_callbacks.py  portfolio_table_callbacks.py  table_control_callbacks.py
components/layouts/: __init__.py  auth_layouts.py  footer_layouts.py  main_layouts.py  mantine_theme.py  misc_layouts.py
components/layouts/portfolio_mode/: __init__.py  alerts_modal_layouts.py  insert_row_layouts.py  portfolio_table_layouts.py  table_control_layouts.py
cron_jobs/: __init__.py  cron_job.py
data/: input_column_definitions.xlsx
models/: database.py  models.py
utils/: cache_setup.py  enums.py  portfolio_table_inputs.py  reference.py
